--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Paulo Jerônimo",
   "license": "ISC",
   "dependencies": {
-    "metalsmith": "^2.1.0"
+    "metalsmith": "^2.1.0",
+    "metalsmith-markdown": "^0.2.1"
   }
 }
