--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "metalsmith": "^2.1.0",
     "metalsmith-assets": "^0.1.0",
     "metalsmith-layouts": "^1.6.5",
-    "metalsmith-markdown": "^0.2.1"
+    "metalsmith-markdown": "^0.2.1",
+    "metalsmith-multi-language": "^0.1.1"
   }
 }
