--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "metalsmith-assets": "^0.1.0",
     "metalsmith-layouts": "^1.6.5",
     "metalsmith-markdown": "^0.2.1",
-    "metalsmith-multi-language": "^0.1.1"
+    "metalsmith-multi-language": "^0.1.1",
+    "metalsmith-permalinks": "^0.5.0"
   }
 }
