--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jade": "^1.11.0",
     "metalsmith": "^2.1.0",
     "metalsmith-assets": "^0.1.0",
+    "metalsmith-i18n": "^0.2.0",
     "metalsmith-layouts": "^1.6.5",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-multi-language": "^0.1.1",
